follow the demo source code, get access to the compass

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,6 +16,6 @@
         android:layout_below="@+id/textView"
         android:layout_marginTop="94dp"
         android:layout_centerHorizontal="true"
-        android:src="@drawable/Compass-Blue-icon"/>
+        android:src="@drawable/compass"/>
 
 </RelativeLayout>
